--- a/config/_default/config.yaml
+++ b/config/_default/config.yaml
@@ -1,18 +1,21 @@
 baseURL: 'https://startwords.cdh.princeton.edu/'
-title: Startwords
+title: DHQwords
 theme: startwords
 copyright: >-
   This work is licensed under a Creative Commons Attribution 4.0 International
   License.
 enableEmoji: true
-googleAnalytics: G-0XGPQFYSR7
+# googleAnalytics:
 enableRobotsTXT: true
 enableGitInfo: true
 timeout: 300s
+taxonomies:
+  category: categories
+  tag: tags
 disableKinds:
-  - taxonomy
-  - term
-  - tag
+  # - taxonomy
+  # - term
+  # - tag
 permalinks:
   issues: '/:sections/:slug/'
 
@@ -47,6 +50,7 @@ Author:
   email: cdh-info@princeton.edu
 
 params:
+  shortTitle: dhq
   dateform: 'January 2, 2006'
   dateformShort: January 2
   dateformNum: '2006-01-02'
@@ -61,6 +65,9 @@ params:
   ISSN: 2694-2658
   googleSiteVerification: pS2kpksxg6JeC90IvA8BHVsFuK_6b7J_vARVLqqu7ck
   absoluteArticleLinks: false
+  # logo
+  # logotype
+  num_features: 0
 
 defaultContentLang: en
 
@@ -93,6 +100,7 @@ markup:
   goldmark:
     renderer:
       unsafe: true
+      hardWraps: true
 
 security:
   enableInlineShortcodes: false
