Add production config to set url

--- a/config/_default/config.yaml
+++ b/config/_default/config.yaml
@@ -1,4 +1,4 @@
-baseURL: 'https://startwords.cdh.princeton.edu/'
+baseURL: 'http://localhost:1313/'
 title: DHQwords
 theme: startwords
 copyright: >-
