--- a/.github/workflows/gh-pages.yml
+++ b/.github/workflows/gh-pages.yml
@@ -48,7 +48,6 @@ jobs:
 
     - name: deploy site to github pages
       uses: peaceiris/actions-gh-pages@v3
-      env:
-        ACTIONS_DEPLOY_KEY: ${{ secrets.ACTIONS_DEPLOY_KEY }}
-        PUBLISH_BRANCH: gh-pages
-        PUBLISH_DIR: ./public
+      with:
+       github_token: ${{ secrets.ACTIONS_DEPLOY_KEY }}
+       # using default branch gh-pages and publish dir public
