--- a/.github/workflows/gh-pages.yml
+++ b/.github/workflows/gh-pages.yml
@@ -49,5 +49,6 @@ jobs:
     - name: deploy site to github pages
       uses: peaceiris/actions-gh-pages@v3
       with:
-       github_token: ${{ secrets.ACTIONS_DEPLOY_KEY }}
+        github_token: ${{ secrets.GITHUB_TOKEN }}
+        # github_token: ${{ secrets.ACTIONS_DEPLOY_KEY }}
        # using default branch gh-pages and publish dir public
