--- a/config/_default/config.yaml
+++ b/config/_default/config.yaml
@@ -1,4 +1,4 @@
-baseURL: 'http://localhost:1313/'
+baseURL: 'https://startwords.cdh.princeton.edu/'
 title: DHQwords
 theme: startwords
 copyright: >-
@@ -65,10 +65,7 @@ params:
   images:
     - social.png
   description: >-
-    A research periodical irregularly published by the Center for Digital
-    Humanities at Princeton.
-  ISSN: 2694-2658
-  googleSiteVerification: pS2kpksxg6JeC90IvA8BHVsFuK_6b7J_vARVLqqu7ck
+     an experiment republishing DHQ articles with Hugo & Startwords theme.
   absoluteArticleLinks: false
   # logo
   # logotype
@@ -91,15 +88,19 @@ languages:
       available_in: Disponible en Español
     menu:
       footer:
-        - name: Acerca de
-          url: /es/acerca-de/
-          weight: 20
+        # - name: Acerca de
+        #   url: /es/acerca-de/
+        #   weight: 20
         - name: Keywords
           url: categories/
+        - name: Tags
+          url: tags/
+          weight: 3
+
   #       - name: Authors
   #         url: authors/
   #         weight: 30
-  # fr:
+  fr:
     languageName: français
     weight: 3
     params:
@@ -111,7 +112,14 @@ languages:
     weight: 4
     params:
       license_text: Atribuição-SemDerivações 4.0 Internacional. (CC BY ND 4.0)
-
+  # de:
+  #   languageName: Deutsch
+  #   weight: 5
+  #   params:
+  #     license_text: Pas de Modification 4.0 International. (CC BY ND 4.0)
+  #     description: ""
+  #     available_in: Disponible en Español
+  # there is one german langUsage tag but no german content
 
 
 markup:
